--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{"homepage":"https://github.com/abdessamadpas/new-personal-portfolio","name":"personal-portfolio","version":"0.1.0","private":true,
+{"homepage":"https://abdessamadpas.github.io/new-personal-portfolio/","name":"personal-portfolio","version":"0.1.0","private":true,
 "dependencies":{"@testing-library/jest-dom":"^5.16.4",
 
 "@testing-library/react":"^13.3.0",
